--- a/app/page.module.css
+++ b/app/page.module.css
@@ -203,28 +203,43 @@
   }
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  gap: 20px; 
+  margin: 50px;
+  width: 600px;
+  min-height:  300px;
+  background-color: var(--violetDark);
+  border-radius: 10px;
+  padding: 10px 50px;
+  color: rgb(196, 39, 196);
+}
+.errors {
+  color: red;
+  font-weight: bold;
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+.fb {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+.wrapper {
+  display: flex;
+  justify-content: start;
+  gap: 50px;
+}
+
+.label {
+  flex-basis: 10px;
+  flex-shrink: 2;
+  flex-grow: 1;
+}
+
+.input {
+  flex-grow: 1;
 }
