--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,43 @@
 :root {
-  /* My var */
-  --black: #16171d;
+  /* My var - Colors*/
+	--black: #16171d;
 	--gray: #afb2bf;
 	--violetDark: #2e2d3d;
-  --primaryHover: #452481;
+	--primaryHover: #452481;
 	--links: #a97bff;
 	--white: #fafafa;
 	--red: #cc384e;
 	--primary: #6c38cc;
-  --primary-light: #7653fc;
-  --primary-hover: #3f20bd;
+	--primary-light: #7653fc;
+	--primary-hover: #3f20bd;
+	--blackpure: #000;
+	--black: #171718;
+	--black-border: #26292d;
+	--white: #fff;
+	--purple: #5c62ec;
+
+	/* Nav */
+	--nav-bg: var(--black);
+	--nav-border: var(--black-border);
+	--nav-text: var(--white);
+
+	/* Header */
+	--header-bg: var(--black);
+	--header-text: var(--white);
+
+	/* Footer */
+	--footer-bg: var(--black);
+	--footer-text: var(--white);
+
+	/* Light mode */
+	--page-bg: var(--white);
+	--text-color: var(--black);
+	--accent: var(--purple);
+	--title-1: var(--accent);
+
+	--project-card-bg: var(--white);
+	--project-card-text: var(--black);
+	--box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
   /* --- --- */
 
   --max-width: 1100px;
@@ -94,14 +122,16 @@
 
 html,
 body {
+  display: flex;	
+  flex-direction: column;
   width: 1200px;
   max-width: 100vw;
+  min-height: 100vh;
   margin: 0 auto;
   overflow-x: hidden;
 }
 
 body {
-  /* color: rgb(var(--foreground-rgb)); */
   color: white !important;
   background-color: var(--black) !important;
 }
