--- a/app/components/Header/Header.module.css
+++ b/app/components/Header/Header.module.css
@@ -30,6 +30,7 @@
 .header__title em {
 	font-style: normal;
 	color: var(--accent);
+	animation: pulse 1.5s ease-out 0s alternate infinite none running;
 }
 
 .header__text {
@@ -40,4 +41,19 @@
 
 .header__text p + p {
 	margin-top: 0.5em;
+}
+
+@keyframes pulse {
+	0% {
+		text-shadow: 0px 0px 1px var(--primary-hover);
+	}
+	25% {
+		text-shadow: 0px 0px 7px var(--primary-hover);
+	}
+	50% {
+		text-shadow: 0px 0px 14px var(--primary-hover);
+	}
+	100% {
+		text-shadow: 0px 0px 19px var(--primary-hover);
+	}
 }
