--- a/app/globals.css
+++ b/app/globals.css
@@ -129,6 +129,9 @@ body {
   min-height: 100vh;
   margin: 0 auto;
   overflow-x: hidden;
+  font-family: "Agbalumo", system-ui !important;
+  font-weight: 400;
+  font-style: normal;
 }
 
 body {
