--- a/components/Btn/Btnr.module.css
+++ b/components/Btn/Btnr.module.css
@@ -11,12 +11,13 @@
 	font-size: 16px;
 	font-weight: 500;
     border: none;
-	transition: all .4s;
+	transition: all .3s;
 }
 
 .btn:hover {
-	box-shadow: 0px 0px 10px 5px var(--primary-hover);
+	box-shadow: 0px 0px 12px 3px var(--primary-hover);
 	opacity: 0.9;
+	transform: scale(1.1);
 }
 
 .btn:active {
