--- a/app/components/Navbarr/Navbarr.module.css
+++ b/app/components/Navbarr/Navbarr.module.css
@@ -20,7 +20,6 @@
 
 .logo {
 	margin-right: auto;
-	color: var(--nav-text);
 	font-size: 24px;
 	/* font-family: 'Poppins', sans-serif; */
 }
@@ -47,10 +46,13 @@
 	font-size: 24px;
 	text-decoration: none;
 }
-
 .nav-list__link {
 	color: var(--nav-text);
 	transition: all 0.2s ease-in;
+}
+.active {
+	color: (var(--primary-light));
+	text-shadow: 0px 0px 20px var(--primary-light);
 }
 
 .nav-list__link:hover {
@@ -60,7 +62,7 @@
 .nav-list__link--active {
 	position: relative;
 }
-
+/* 
 .nav-list__link--active::before {
 	content: '';
 
@@ -72,7 +74,7 @@
 	height: 2px;
 	width: 100%;
 	background-color: var(--accent);
-}
+} */
 
 
 /* Dark mode btn */
