--- a/app/components/Header/Header.module.css
+++ b/app/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 /* Header */
 .header {
-	padding: 40px 0;
+	padding: 40px 0 0 0;
 	min-height: 695px;
 	display: flex;
 	justify-content: center;
@@ -24,28 +24,10 @@
 .header__wrapper {
 	position: relative;
 	z-index: 1;
-}
-
-.header__title {
-	margin-bottom: 20px;
-	font-size: 40px;
-	font-weight: 700;
-	line-height: 1.4;
-}
-
-.header__title strong {
-	font-size: 60px;
-	font-weight: 700;
-}
-
-.header__title em {
-	font-style: normal;
-	color: var(--accent);
-	animation: pulse 2s linear 0s alternate infinite;
-}
+}	
 
 .header__text {
-	margin-bottom: 40px;
+	margin-bottom: 60px;
 	font-size: 18px;
 	line-height: 1.333;
 }
